--- a/styles.css
+++ b/styles.css
@@ -81,61 +81,115 @@ body {
 body {
   background: url(/img/cut.jpg) no-repeat center center/ cover;
   height: 100vh;
-  position: relative;
-}
-
-#open-btn {
-  position: absolute;
-  top: 60%;
-  left: 15%;
-  width: 350px;
-  height: 80px;
-  font-size: 1.5rem;
-  background: transparent;
-  padding: 5px;
-  border-radius: 10px;
-  color: #fff;
-  box-shadow: 0 0 4px black;
-}
-
-#open-btn:hover {
-  background-color: #fff;
-  color: #000;
-}
-
-#modal {
-  background-color: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 200px;
-  height: 100px;
-  transform: translate(-50%, -50%);
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 1.2rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
-#close-btn {
-  font-size: 2.5rem;
+.accordion {
+  width: 65%;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 30px;
 }
 
-#close-btn {
-  font-size: 2rem;
-  color: lightseagreen;
+.accordion .accordion-title {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.accordion .content-container .question {
+  padding: 18px 0px;
+  font-size: 22px;
   cursor: pointer;
+  border-bottom: 1px solid #000;
+
+  position: relative;
 }
 
-#modal-container {
-  display: none;
+.accordion .content-container .question::after {
+  content: "+";
+
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  right: -5px;
 }
-/*  */
+
+.accordion .content-container .answer {
+  padding-top: 15px;
+  font-size: 22px;
+  line-height: 1.5;
+  width: 100%;
+
+  height: 0px;
+  overflow: hidden;
+  transition: 0.7s;
+}
+
+/* Javascript Styling Link */
+
+.accordion .content-container.active .answer {
+  height: 150px;
+}
+
+.accordion .content-container.active .question {
+  font-size: 18px;
+  transition: 0.5;
+}
+
+/* 
+  ########################################
+
+    Stop-Watch Styling
+
+  ########################################
+*/
+
+body {
+  height: 100vh;
+  background: url(/img/cut.jpg) no-repeat center center/ cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 60%;
+  height: 250px;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 0 3px;
+}
+
+#timer {
+  width: 100%;
+  font-size: 70px;
+  text-align: center;
+  margin: 0px auto;
+  padding: 35px;
+}
+
+.buttons {
+  text-align: center;
+}
+
+button {
+  margin: 0 10px;
+  border: none;
+}
+
+button i {
+  font-size: 2rem;
+  padding: 10px;
+  color: #fff;
+  width: 60px;
+}
+
+#play {
+  background-color: #228c22;
+}
+#pause {
+  background-color: #ff6700;
+}
+#reset {
+  background-color: #ff0800;
+}
