--- a/styles.css
+++ b/styles.css
@@ -3,73 +3,6 @@
   font-family: "lato", sans-serif;
 }
 
-/* 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Lato", sans-serif;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  text-align: center;
-  background: url(img/cut.jpg) no-repeat center center/ cover;
-}
-
-.container {
-  width: 550px;
-  height: 450px;
-}
-
-.header {
-  font-size: 1.2rem;
-  border: solid 2px #fff;
-  color: #fff;
-  background-color: #262626;
-  padding: 5px;
-  width: 80%;
-  margin: 20px auto;
-  border-radius: 5px;
-}
-
-.main-content {
-  width: 100%;
-  height: 300px;
-  background-color: #fff;
-  border-radius: 15px;
-  padding: 50px 40px;
-  box-shadow: 0 0 10px;
-}
-
-.main-content .text-area {
-  font-size: 1.5rem;
-  line-height: 1.5;
-}
-
-.main-content .person {
-  font-size: 1.6rem;
-  color: lightcoral;
-  text-transform: uppercase;
-  margin-top: 20px;
-}
-
-.button-area button {
-  background-color: #262626;
-  color: #fff;
-  font-size: 1.3rem;
-  padding: 10px 15px;
-  margin-top: 20px;
-  border-radius: 5px;
-}
-
-.button-area button:active {
-  background-color: lightblue;
-} */
-
 /*
   ##############################
 
@@ -137,59 +70,101 @@ body {
 }
 
 /* 
-  ########################################
+  #####################################
 
-    Stop-Watch Styling
+    TO-DO List Styling
 
-  ########################################
+  #####################################
 */
 
 body {
-  background: url(/img/cut.jpg) no-repeat center center/ cover;
   height: 100vh;
+  background: url(/img/nerve.jpg) no-repeat center center/ cover;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.container {
-  width: 60%;
-  height: 250px;
-  background-color: #fff;
-  border-radius: 30px;
+#add-task-container {
+  width: 350px;
+  padding: 20px 10px;
+  background: #fff;
+  border-radius: 20px;
   box-shadow: 0 0 3px;
+  display: flex;
+  margin-bottom: 20px;
 }
 
-#timer {
-  width: 100%;
-  font-size: 70px;
-  text-align: center;
-  margin: 0px auto;
-  padding: 30px;
+input {
+  flex: 5;
+  margin-right: 10px;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  padding: 5px;
 }
 
-.buttons {
-  text-align: center;
+#add-task {
+  flex: 1;
+  font-size: 1.2rem;
+  padding: 5px;
+  background-color: #fff;
+  color: green;
+  border: green solid 2px;
+  border-radius: 10px;
 }
 
-button {
-  margin: 0 10px;
-  border: none;
-}
-
-button i {
-  font-size: 2rem;
-  padding: 10px;
+#add-task:hover {
+  background-color: green;
   color: #fff;
-  width: 50px;
 }
 
-#play {
-  background-color: #228c22;
+.task {
+  width: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 3px;
+  padding: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
 }
-#pause {
-  background-color: #ff6700;
+
+.task li {
+  list-style: none;
+  flex: 4;
+  padding: 5px;
+  font-size: 1.2rem;
+  margin: 10px;
 }
-#reset {
-  background-color: #ff0800;
+
+.task button {
+  flex: 1;
+  border-radius: 10px;
+  background-color: #fff;
+  cursor: pointer;
 }
+
+.task .checkTask {
+  color: #f58025;
+  margin-right: 5px;
+  border: 2px solid #f58025;
+  font-size: 1.5rem;
+}
+
+.task .checkTask:hover {
+  background-color: #f58025;
+  color: #f2f2f2;
+}
+
+.task .deleteTask {
+  color: #d31a38;
+  border: 2px solid #d31a38;
+  font-size: 1.5rem;
+}
+
+.task .deleteTask:hover {
+  background-color: #d31a38;
+  color: #f3f3f3;
+}
+
+/* grandmas recipe */
